--- a/ops-agent/requirements.txt
+++ b/ops-agent/requirements.txt
@@ -1,7 +1,10 @@
 fastapi
 uvicorn[standard]
 langchain
+langchain-community
 langchain-openai
 faiss-cpu
 python-dotenv
 pydantic
+unstructured
+markdown # <-- AND ADD THIS LINE
