updated to use the gemini model instead of chatgpt

--- a/ops-agent/requirements.txt
+++ b/ops-agent/requirements.txt
@@ -2,9 +2,9 @@ fastapi
 uvicorn[standard]
 langchain
 langchain-community
-langchain-openai
+langchain-google-genai
 faiss-cpu
 python-dotenv
 pydantic
 unstructured
-markdown # <-- AND ADD THIS LINE
+markdown
