--- a/ops-agent/requirements.txt
+++ b/ops-agent/requirements.txt
@@ -2,7 +2,7 @@ fastapi
 uvicorn[standard]
 langchain
 langchain-community
-langchain-google-genai
+langchain-openai     
 faiss-cpu
 python-dotenv
 pydantic
