fixed the EOF file error updated the docker compose file, but still need to test it.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,7 @@ services:
       - ./sops:/app/sops
     env_file:
       - .env
+
+# Add these two lines
+stdin_open: true  # This keeps the standard input open
+tty: true         # This allocates a pseudo-TTY (a terminal)
